# adit-client

./: README.md  cli.py  example.env  pyproject.toml  tasks.py
.github/: renovate.json
.github/workflows/: ci.yml
adit_client/: client.py
notebooks/: adit_client prod.ipynb  adit_client.ipynb
tests/: conftest.py  test_client.py
