[tool.poetry]
name = "adit-client"
version = "0.2.2"
description = "ADIT Client library to connect to an ADIT server."
authors = ["Kai Schlamp <kai.schlamp@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "adit_client" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
dicomweb-client = "^0.59.1"
pydicom = "^2.4.3"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
ipykernel = "^6.29.0"
ipython = "^8.21.0"
pyright = "^1.1.349"
pytest = "^8.0.0"
python-dotenv = "^1.0.1"
ruff = "^0.2.0"

[tool.pyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
