[project]
name = "adit-client"
description = "ADIT Client library to connect to an ADIT server."
authors = [{ name = "Kai Schlamp" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]
dependencies = ["dicognito<0.18.0", "dicomweb-client", "pydicom<3.0.0"]

[dependency-groups]
dev = [
    "adit @ git+https://github.com/openradx/adit.git@0.39.4",
    "adit-radis-shared @ git+https://github.com/openradx/adit-radis-shared.git@0.14.0",
    "factory-boy<=3.3.3",
    "ipykernel",
    "ipython",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-env",
    "pytest-mock",
    "pytest-playwright",
    "python-dotenv",
    "ruff",
    "typer",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I"]

[tool.pyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "adit.settings.production"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
env = [
    "CALLING_AE_TITLE=ADIT",
    "DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres",
    "DJANGO_ADMIN_EMAIL=admin@localhost",
    "DJANGO_ADMIN_FULL_NAME=ADIT-Admin",
    "DJANGO_ALLOWED_HOSTS=localhost",
    "DJANGO_CSRF_TRUSTED_ORIGINS=localhost",
    "DJANGO_EMAIL_URL=smtp://adit@localhost",
    "DJANGO_SECRET_KEY=dummy",
    "DJANGO_SECURE_SSL_REDIRECT=false",
    "DJANGO_SERVER_EMAIL=adit@localhost",
    "DJANGO_STATIC_ROOT=.",
    "POSTGRES_PASSWORD=postgres",
    "RECEIVER_AE_TITLE=ADIT",
    "SITE_DOMAIN=localhost",
    "SITE_NAME=ADIT",
    "SUPERUSER_AUTH_TOKEN=dummy",
    "SUPERUSER_EMAIL=superuser@localhost",
    "SUPERUSER_USERNAME=superuser",
    "SUPERUSER_PASSWORD=dummy",
    "SUPPORT_EMAIL=support@localhost",
    "TOKEN_AUTHENTICATION_SALT=dummy",
    "USER_TIME_ZONE=UTC",
]
log_cli = 0
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore:'cgi' is deprecated:DeprecationWarning",
    "ignore:.*No directory at.*staticfiles.*:UserWarning",
]

[tool.coverage.run]
branch = true
source = ["adit_client"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
